CB-24621: Find the remote data context for CDL for DH provisioning.